# CCUT

./: .gitignore  Dockerfile  Dockerfile_mamba  LICENCE-APACHE-2.0.txt  LICENSE  README.md  env.dev.yml  env.yml  env_docker.yml  pyproject.toml  pytest.ini
.github/workflows/: docker.yml  python-app.yml
ccut/: Tutorial-Training.ipynb  Tutorial-inference.ipynb  Tutorial.ipynb  main_train.py
ccut/data_prep/: convert_and_normalize_v3.py  create_sample_list.py  create_sliding_window_coor.v2.py  downsample_cooler.py  downsample_pairs.py
ccut/nn/: basemodel.py  esrgan.py  hooks.py  layers.py  losses.py  rrdbunet.py  swinir.py  trainer.py  unet.py
ccut/tests/: test_basemodel.py  test_hooks.py  test_layers.py  test_losses.py  test_predefined_models.py
ccut/utils/: datahelper.py  dataloader.py  helpers.py  metrics.py  transforms.py  visualize.py
data/: chr1-18_200x200x10k_nozeroes.csv  chr1-18_40x40x50k_nozeroes.csv  chr19-22_200x200x10k_nozeroes.csv  datasets.json  sample_list_2M_cleaned_1-18_cooler.csv  testdata.json
