[tool.pixi.project]
name = "CCUT"
channels = ["conda-forge"]
platforms = ["linux-64"]
[project]
name = "CCUT"
pythonpath = ["ccut"]
version = '0.0.1'

dependencies = [ "cooler", "pysam>=0.22.1,<0.23"] # pip depedencies

# Make package editable
[tool.pixi.pypi-dependencies]
CCUT = { path = ".", editable = true }

[tool.pytest.ini_options]
pythonpath = ["ccut"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Uncomment this and the respective env, if you want ROCm 
# [project.optional-dependencies]
# rocm = ["torch==2.4.0+rocm6.1"]
#
# [tool.pixi.pypi-options]
# extra-index-urls = ["https://download.pytorch.org/whl/rocm6.1"]

[tool.pixi.dependencies]
hatch = ">=1.12.0,<2"
hatchling = ">=1.25.0,<2"
numpy = ">=1,<2"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.9.1,<4"
seaborn = ">=0.13.2,<0.14"
tqdm = ">=4.66.5,<5"
timm = ">=1.0.9,<2"
scikit-learn = ">=1.5.2,<2"

[tool.pixi.feature.cuda]
platforms = ["linux-64"]
system-requirements = {cuda = "12"} 
channels = ["nvidia", "pytorch"] 

[tool.pixi.feature.cuda.dependencies]
pytorch = ">=2.1.1"


[tool.pixi.feature.cpu]
platforms = ["linux-64"]
channels = ["conda-forge"] # Results in:  ["nvidia", "conda-forge", "pytorch"] when the default is `conda-forge`

[tool.pixi.feature.cpu.dependencies]
pytorch = ">=2.1.1"

[tool.pixi.environments]
cuda = ["cuda"]
cpu = ["cpu"]
# rocm = ["rocm"]
default = ["cpu"]
[tool.pixi.tasks]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]
